# multicurrency

./: .coveragerc  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  justfile  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
docs/: _currency.html  _exceptions.html  afghani.html  ariary.html  baht.html  balboa.html  birr.html  boliviano.html  cedi.html  colon.html  crypto.html  currency.html  dalasi.html  denar.html  dinar.html  dirham.html  dobra.html  dollar.html  dong.html  dram.html  escudo.html  euro.html  exceptions.html  florin.html  forint.html  franc.html  fuerte.html  gourde.html  guarani.html  hryvnia.html  index.html  kina.html  kip.html  koruna.html  krona.html  krone.html  kuna.html  kwacha.html  kwanza.html  kyat.html  (+49 more)
docs/currencies/: afghani.html  ariary.html  baht.html  balboa.html  birr.html  boliviano.html  cedi.html  colon.html  crypto.html  dalasi.html  denar.html  dinar.html  dirham.html  dobra.html  dollar.html  dong.html  dram.html  escudo.html  euro.html  florin.html  forint.html  franc.html  fuerte.html  gourde.html  guarani.html  hryvnia.html  index.html  kina.html  kip.html  koruna.html  krona.html  krone.html  kuna.html  kwacha.html  kwanza.html  kyat.html  lari.html  lek.html  lempira.html  leone.html  (+44 more)
docs/multicurrency/: afghani.html  algerian_dinar.html  argentine_peso.html  ariary.html  armenian_dram.html  aruban_florin.html  australian_dollar.html  azerbaijanian_manat.html  bahamian_dollar.html  bahraini_dinar.html  baht.html  balboa.html  barbados_dollar.html  belarusian_ruble.html  belize_dollar.html  bermudian_dollar.html  birr.html  bolivar_fuerte.html  boliviano.html  brazilian_real.html  brunei_dollar.html  bulgarian_lev.html  burundi_franc.html  canadian_dollar_en.html  canadian_dollar_fr.html  cape_verde_escudo.html  cayman_islands_dollar.html  cedi.html  cfa_franc_bceao.html  cfa_franc_beac.html  cfp_franc.html  chilean_peso.html  colombian_peso.html  colon.html  congolese_franc.html  cordoba_oro.html  costa_rican_colon.html  croatian_kuna.html  cuban_peso.html  currency.html  (+146 more)
multicurrency/: __init__.py  __init__.pyi  _currency.py  _currency.pyi  afghani.py  afghani.pyi  algerian_dinar.py  algerian_dinar.pyi  argentine_peso.py  argentine_peso.pyi  ariary.py  ariary.pyi  armenian_dram.py  armenian_dram.pyi  aruban_florin.py  aruban_florin.pyi  australian_dollar.py  australian_dollar.pyi  azerbaijanian_manat.py  azerbaijanian_manat.pyi  bahamian_dollar.py  bahamian_dollar.pyi  bahraini_dinar.py  bahraini_dinar.pyi  baht.py  baht.pyi  balboa.py  balboa.pyi  barbados_dollar.py  barbados_dollar.pyi  belarusian_ruble.py  belarusian_ruble.pyi  belize_dollar.py  belize_dollar.pyi  bermudian_dollar.py  bermudian_dollar.pyi  birr.py  birr.pyi  bolivar_fuerte.py  boliviano.py  (+330 more)
src/docs/templates/: config.mako  css.mako  html.mako  pdf.mako
src/multicurrency/: __init__.py  __init__.pyi  _currency.py  _currency.pyi  _exceptions.py  _exceptions.pyi  afghani.py  afghani.pyi  ariary.py  ariary.pyi  baht.py  baht.pyi  balboa.py  balboa.pyi  birr.py  boliviano.py  cedi.py  cedi.pyi  colon.py  crypto.py  crypto.pyi  currency.py  dalasi.py  dalasi.pyi  denar.py  denar.pyi  dinar.py  dinar.pyi  dirham.py  dobra.py  dobra.pyi  dollar.py  dollar.pyi  dong.py  dram.py  dram.pyi  escudo.py  escudo.pyi  euro.py  exceptions.py  (+104 more)
src/multicurrency/currencies/: __init__.py  __init__.pyi  afghani.py  afghani.pyi  ariary.py  ariary.pyi  baht.py  baht.pyi  balboa.py  balboa.pyi  birr.py  birr.pyi  boliviano.py  boliviano.pyi  cedi.py  cedi.pyi  colon.py  colon.pyi  crypto.py  crypto.pyi  dalasi.py  dalasi.pyi  denar.py  denar.pyi  dinar.py  dinar.pyi  (+142 more)
src/tests/: test__currency.py  test_birr.py  test_boliviano.py  test_colon.py  test_crypto.py  test_dinar.py  test_dirham.py  test_dobra.py  test_escudo.py  test_fuerte.py  test_gourde.py  test_hryvnia.py  test_koruna.py  test_krona.py  test_kuna.py  test_kwanza.py  test_lempira.py  test_leone.py  test_lilangeni.py  test_loti.py  test_manat.py  test_metical.py  test_nakfa.py  test_ngultrum.py  test_nuevo_sol.py  test_oro.py  test_peso.py  test_pound.py  test_pula.py  test_rand.py  test_real.py  test_rial.py  test_riel.py  test_ringgit.py  test_riyal.py  test_rufiyaa.py  test_rupiah.py  test_shekel.py  test_somoni.py  test_tala.py  (+3 more)
tests/: test__currency.py  test__exceptions.py  test_afghani.py  test_algerian_dinar.py  test_argentine_peso.py  test_ariary.py  test_armenian_dram.py  test_aruban_florin.py  test_australian_dollar.py  test_azerbaijanian_manat.py  test_bahamian_dollar.py  test_bahraini_dinar.py  test_baht.py  test_balboa.py  test_barbados_dollar.py  test_belarusian_ruble.py  test_belize_dollar.py  test_bermudian_dollar.py  test_birr.py  test_bitcoin.py  test_bolivar_fuerte.py  test_boliviano.py  test_brazilian_real.py  test_brunei_dollar.py  test_bulgarian_lev.py  test_burundi_franc.py  test_canadian_dollar_en.py  test_canadian_dollar_fr.py  test_cape_verde_escudo.py  test_cayman_islands_dollar.py  test_cedi.py  test_cfa_franc_bceao.py  test_cfa_franc_beac.py  test_cfp_franc.py  test_chilean_peso.py  test_colombian_peso.py  test_colon.py  test_congolese_franc.py  test_cordoba_oro.py  test_costa_rican_colon.py  (+188 more)
tests/test_currencies/: test_afghani.py  test_ariary.py  test_baht.py  test_balboa.py  test_birr.py  test_boliviano.py  test_cedi.py  test_colon.py  test_crypto.py  test_dalasi.py  test_denar.py  test_dinar.py  test_dirham.py  test_dobra.py  test_dollar.py  test_dong.py  test_dram.py  test_escudo.py  test_euro.py  test_florin.py  test_forint.py  test_franc.py  test_fuerte.py  test_gourde.py  test_guarani.py  test_hryvnia.py  test_kina.py  test_kip.py  test_koruna.py  test_krona.py  test_krone.py  test_kuna.py  test_kwacha.py  test_kwanza.py  test_kyat.py  test_lari.py  test_lek.py  test_lempira.py  test_leone.py  test_leu.py  (+43 more)
tools/generator/: currency.csv  currency.tmpl  currency_class.tmpl  currency_module.tmpl  currency_tests.tmpl  extend_csv.py  generator  test_class.tmpl  test_currency.tmpl  test_module.tmpl
tools/profiler/: profiler  run
(+5 files in other folders)
